# comfyui-touch-manager

./: .comfyignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  RELEASE-CHECKLIST.md  __init__.py  biome.json  justfile  package.json  pyproject.toml  release-please-config.json  touch_manager.py
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/blueprint/adrs/: 0001-adopt-typescript-bun-build.md
screenshots/: Dockerfile  Dockerfile.dockerignore  README.md  capture.mjs  entrypoint.sh  package.json  workflow.json
src/: index.ts  manager-core.ts  touch-manager-ui.ts
tests/: conftest.py  test_contract.py  test_endpoints.py
tests/js/: index.test.js  manager-core.test.js  modal.test.js
tests/js/__mocks__/: app.js
